--- a/garden/index.html
+++ b/garden/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Feuille d'émargement">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link type="text/css" href="https://monserveur.fr/tp6/tp.min.css" rel="stylesheet">
-    <link type="text/css" href="https://github.com/BastienPesce/bastienpesce.github.io/garden/style.css" rel="stylesheet">
+    <link type="text/css" href="style.css" rel="stylesheet">
 
     <!--
         Exemple d'appel avec une feuille de CSS externe :
