--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -1458,7 +1458,7 @@
                                       <tr>
                                         <td class="pc-cta-text pc-fb-font"
                                           style="vertical-align: top; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 300; line-height: 1.56; color: #9B9B9B; text-align: center;"
-                                          valign="top" align="center"> Y'en aura certainement plein d'autres qui sont pas encore prévus. </td>
+                                          valign="top" align="center">Il y en aura certainement plein d'autres qui sont pas encore prévus. </td>
                                       </tr>
                                       <tr>
                                         <td
