--- a/newsletter/index.html
+++ b/newsletter/index.html
@@ -1279,7 +1279,7 @@
                                                   <td class="pc-post-col-in pc-m-img"
                                                     style="vertical-align: top; padding: 20px;" valign="top"> <a
                                                       href="http://example.com" style="text-decoration: none;">
-                                                      <img src="./images/back.jpg" width="240" height="200"
+                                                      <img src="./images/hdl.jpg" width="240" height="200"
                                                         class="pc-post-img" alt=""
                                                         style="border: 0; line-height: 100%; outline: 0; -ms-interpolation-mode: bicubic; display: block; color: #151515; max-width: 100%; height: auto; font-family: 'Fira Sans', Helvetica, Arial, sans-serif; font-size: 14px; border-radius: 6px;">
                                                     </a> </td>
